--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prettier": "^2.0.4"
   },
   "dependencies": {
+    "cookie-session": "^1.4.0",
     "ejs": "^3.0.2",
     "express": "^4.17.1"
   }
