--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cookie-session": "^1.4.0",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
     "http-errors": "^1.7.3"
   }
 }
